--- a/Practica-4/index.html
+++ b/Practica-4/index.html
@@ -11,7 +11,7 @@
 
 	<div class="container">
 
-		<!-- cabecera -->
+		<!-- Cabecera -->
 		<header class="main-header">
 			<img src="images/logo.jpg" alt="logotipo" class="logo">
 
@@ -31,12 +31,12 @@
 			</nav>
 		</header>
 
-		<!-- banner -->
+		<!-- Banner -->
 		<section class="banner">
 			<img src="images/img-banner.jpg" alt="banner">
 		</section>
 
-		<!-- productos -->
+		<!-- Productos -->
 		<section class="vip-products">
 			<article class="product">
 				<div class="photo-container">
