trabajo clase virtual

--- a/Practica-5/flexbox-practica/html/index.html
+++ b/Practica-5/flexbox-practica/html/index.html
@@ -3,13 +3,16 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="../master.css">
+		<!-- link al font-->
+		<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 		<title>Working Group</title>
 	</head>
 	<body>
 		<div class="container">
 			<div class="card">
 				<div class="card-image">
-					<img src="images/img-profile-girl.jpg" alt="girl">
+					<img src="img-profile-girl.jpg" alt="girl">
 					<ul class="social-media">
 						<li><a href="#"><span class="ion-social-facebook"></span></a></li>
 						<li><a href="#"><span class="ion-social-twitter"></span></a></li>
@@ -24,7 +27,7 @@
 			</div>
 			<div class="card">
 				<div class="card-image">
-					<img src="images/img-profile-man.jpg" alt="man">
+					<img src="img-profile-man.jpg" alt="man">
 					<ul class="social-media">
 						<li><a href="#"><span class="ion-social-facebook"></span></a></li>
 						<li><a href="#"><span class="ion-social-twitter"></span></a></li>
@@ -39,7 +42,7 @@
 			</div>
 			<div class="card">
 				<div class="card-image">
-					<img src="images/img-profile-girl.jpg" alt="girl">
+					<img src="img-profile-girl.jpg" alt="girl">
 					<ul class="social-media">
 						<li><a href="#"><span class="ion-social-facebook"></span></a></li>
 						<li><a href="#"><span class="ion-social-twitter"></span></a></li>
@@ -54,7 +57,7 @@
 			</div>
 			<div class="card">
 				<div class="card-image">
-					<img src="images/img-profile-man.jpg" alt="man">
+					<img src="img-profile-man.jpg" alt="man">
 					<ul class="social-media">
 						<li><a href="#"><span class="ion-social-facebook"></span></a></li>
 						<li><a href="#"><span class="ion-social-twitter"></span></a></li>
@@ -69,7 +72,7 @@
 			</div>
 			<div class="card">
 				<div class="card-image">
-					<img src="images/img-profile-girl.jpg" alt="girl">
+					<img src="img-profile-girl.jpg" alt="girl">
 					<ul class="social-media">
 						<li><a href="#"><span class="ion-social-facebook"></span></a></li>
 						<li><a href="#"><span class="ion-social-twitter"></span></a></li>
@@ -84,7 +87,7 @@
 			</div>
 			<div class="card">
 				<div class="card-image">
-					<img src="images/img-profile-man.jpg" alt="man">
+					<img src="img-profile-man.jpg" alt="man">
 					<ul class="social-media">
 						<li><a href="#"><span class="ion-social-facebook"></span></a></li>
 						<li><a href="#"><span class="ion-social-twitter"></span></a></li>
