--- a/Practica-5/tp-bootstrap/index.html
+++ b/Practica-5/tp-bootstrap/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
       <div class="container">
         <a href="#">Freelance Portfolio</a>
-        <ul>
+        <ul class="mb-0 d-none d-md-block">
           <li class="float-left ml-2"><a href="#">Portfolio</a></li>
           <li class="float-left ml-2"><a href="#">About</a></li>
           <li class="float-left ml-2"><a href="#">Contact</a></li>
@@ -24,42 +24,42 @@
     </nav>
 
     <header>
-      <div class="container">
+      <div class="container text-center">
         <img src="html/images/profile.png" alt="">
         <h1 class="my-4">Freelance Portfolio</h1>
         <div class="separator">
           <hr>
+          <i class="fas fa-star"></i>
         </div>
-        <i class="fas fa-star"></i>
         <p>Web Developer - Graphic Artist - User Experience Designer</p>
       </div>
     </header>
 
     <section class="content portfolio">
-      <div class="container">
+      <div class="container text-center">
         <h2>Portfolio</h2>
         <div class="separator">
           <hr>
+          <i class="fas fa-star"></i>
         </div>
-        <i class="fas fa-star"></i>
         <div class="row">
-          <article class="col-md-4">
-            <img src="html/images/cabin.png" alt="">
+          <article class="col-md-4 mb-2">
+            <img class="img-fluid" src="html/images/cabin.png" alt="">
           </article>
-          <article class="col-md-4">
-            <img src="html/images/cake.png" alt="">
+          <article class="col-md-4 mb-2">
+            <img class="img-fluid" src="html/images/cake.png" alt="">
           </article>
-          <article class="col-md-4">
-            <img src="html/images/circus.png" alt="">
+          <article class="col-md-4 mb-2">
+            <img class="img-fluid" src="html/images/circus.png" alt="">
           </article>
-          <article class="col-md-4">
-            <img src="html/images/game.png" alt="">
+          <article class="col-md-4 mb-2">
+            <img class="img-fluid" src="html/images/game.png" alt="">
           </article>
-          <article class="col-md-4">
-            <img src="html/images/safe.png" alt="">
+          <article class="col-md-4 mb-2">
+            <img class="img-fluid" src="html/images/safe.png" alt="">
           </article>
-          <article class="col-md-4">
-            <img src="html/images/submarine.png" alt="">
+          <article class="col-md-4 mb-2">
+            <img  class="img-fluid" src="html/images/submarine.png" alt="">
           </article>
         </div>
       </div>
